fix spacing

--- a/src/assets/styles/components/_header.scss
+++ b/src/assets/styles/components/_header.scss
@@ -41,7 +41,7 @@
 
         .icon {
             font-size: 1.125rem;
-            margin-right: 0.125em;
+            margin-right: 0.25em;
         }
     }
 
